# assistant-ui-langgraph

./: README.md
backend/: .env.example  .gitignore  README.md  README_ZH.md  langgraph.json  pyproject.toml
backend/src/teachable_agent/: __init__.py  configuration.py  graph.py  prompts.py  tools.py
frontend/: .env.example  DEBUG_GUIDE.md  README.md  THREAD_ERROR_FIX.md  THREAD_MANAGEMENT.md  package.json  pnpm-lock.yaml
frontend/app/: assistant.tsx  layout.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/[...slug]/: route.ts
frontend/components/: app-sidebar.tsx
frontend/components/assistant-ui/: custom-thread-list.tsx  enhanced-thread-list.tsx  persistent-thread-list.tsx  thread-manager.tsx  thread.tsx
frontend/lib/: chatApi.ts  joinAI.ts  threadDebug.ts  threadUtils.ts
